training and identification

--- a/speech_model/config/config.yaml
+++ b/speech_model/config/config.yaml
@@ -1,4 +1,4 @@
-training: !!bool "false"
+training: !!bool "true"
 device: "mps"
 unprocessed_data: './data/voxceleb/*/*.wav'
 ---
@@ -21,19 +21,20 @@ model:
     hidden: 768 #Number of LSTM hidden layer units
     num_layer: 3 #Number of LSTM layers
     proj: 256 #Embedding size
-    model_path: './speech_id_checkpoint/ckpt_epoch_360_batch_id_28.pth' #Model path for testing, inference, or resuming training
+    model_path: './speech_id_checkpoint/ckpt_epoch_180_batch_id_191.pth' #Model path for testing, inference, or resuming training
 ---
 train:
     N : 4 #Number of speakers in batch
-    M : 7 #Number of utterances per speaker
+    M : 10 #Number of utterances per speaker
     num_workers: 0 #number of workers for dataloader
     lr: 0.01 
     epochs: 950 #Max training speaker epoch 
     log_interval: 28 #Epochs before printing progress
     log_file: './speech_id_checkpoint/Stats'
-    checkpoint_interval: 60 #Save model after x speaker epochs
+    checkpoint_interval: 30 #Save model after x speaker epochs
     checkpoint_dir: './speech_id_checkpoint'
-    restore: !!bool "false" #Resume training from previous model path
+    restore: !!bool "True" #Resume training from previous model path
+    restore_epoch: 180 # epoch from which to restore
 ---
 val:
     N : 4 #Number of speakers in batch
